[package]
name = "nlcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
itertools = "0.13.0"
num = "0.4.3"
phylo = { git = "https://github.com/sriram98v/phylo-rs", version = "0.1.0" }
rayon = "1.10.0"
rand = "0.8.5"
indicatif = "0.17.8"
clap = "4.5.7"

[dev-dependencies]
divan = "0.1.14"

[[bench]]
name = "main"
harness = false

